refactor: Melhoria no IntelliJ HTTP Client